compiler/tests/fa/errors/pure_write_param.salam
// انتظار: خطا۰۱۳
// زبان: فارسی
خالص تابع نوشتن_مقدار(نشانگر : صحیح۶۴*, مقدار : صحیح۶۴) : صحیح۶۴:
    نشانگر[0] = مقدار
    بازگشت مقدار
پایان

تابع اصلی:
    چاپ(1)
پایان
